   [openbsd-compat/mktemp.c openbsd-compat/port-linux.c]
   [openbsd-compat/port-tun.c openbsd-compat/readpassphrase.c]
   [openbsd-compat/setproctitle.c openbsd-compat/xmmap.c]
   make the portable tree compile again - sprinkle unistd.h and string.h 
   back in. Don't redefine __unused, as it turned out to be used in
   headers on Linux, and replace its use in auth-pam.c with ARGSUSED

20060713
 - (dtucker) [auth-krb5.c auth-pam.c] Still more errno.h

20060712
 - (dtucker) [configure.ac defines.h] Only define SHUT_RD (and friends) and
   O_NONBLOCK if they're really needed.  Fixes build errors on HP-UX, old
   Linuxes and probably more.
 - (dtucker) [configure.ac] OpenBSD needs <sys/types.h> before <sys/socket.h>
   for SHUT_RD.
 - (dtucker) [openbsd-compat/port-tun.c] OpenBSD needs <netinet/in.h> before
   <netinet/ip.h>.
 - (dtucker) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2006/07/10 16:01:57
     [sftp-glob.c sftp-common.h sftp.c]
     buffer.h only needed in sftp-common.h and remove some unneeded
     user includes; ok djm@
   - jmc@cvs.openbsd.org 2006/07/10 16:04:21
     [sshd.8]
     s/and and/and/
   - stevesk@cvs.openbsd.org 2006/07/10 16:37:36
     [readpass.c log.h scp.c fatal.c xmalloc.c includes.h ssh-keyscan.c misc.c
     auth.c packet.c log.c]
     move #include <stdarg.h> out of includes.h; ok markus@
   - dtucker@cvs.openbsd.org 2006/07/11 10:12:07
     [ssh.c]
     Only copy the part of environment variable that we actually use.  Prevents
     ssh bailing when SendEnv is used and an environment variable with a really
     long value exists.  ok djm@
   - markus@cvs.openbsd.org 2006/07/11 18:50:48
     [clientloop.c ssh.1 ssh.c channels.c ssh_config.5 readconf.h session.c
     channels.h readconf.c]
     add ExitOnForwardFailure: terminate the connection if ssh(1)
     cannot set up all requested dynamic, local, and remote port
     forwardings. ok djm, dtucker, stevesk, jmc
   - stevesk@cvs.openbsd.org 2006/07/11 20:07:25